[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["extraasync"]

[tool.setuptools.dynamic]
version = {attr = "extraasync.__version__"}

[project]
name = "extraasync"
dynamic = ["version"]
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.12"
authors = [{ name = "Joao S. O. Bueno" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3.13t",
    "Programming Language :: Python :: 3.14t",
    "Programming Language :: Python :: 3.15t",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/jsbueno/extraasync"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
tox = [
    "tox",
    "tox-uv",
]


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --doctest-modules"
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =  py312, py313, py314, py313t, py314t, py3.15

[testenv]
extras = dev
commands = pytest
"""


